--- a/stock/templates/stock/produit_form.html
+++ b/stock/templates/stock/produit_form.html
@@ -1,5 +1,5 @@
-<!-- templates/stock/produit_form.html -->
 {% extends 'stock/base.html' %}
+
 {% block title %}Ajouter / Modifier Produit{% endblock %}
 
 {% block content %}
@@ -7,8 +7,10 @@
     <h4 class="mb-3">{{ form.instance.pk|yesno:"Modifier le produit,Ajouter un nouveau produit" }}</h4>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <div class="mt-3">
+        <div class="form-group">
+            {{ form.as_p }}
+        </div>
+        <div class="mt-3 d-flex justify-content-between">
             <button type="submit" class="btn btn-success">Enregistrer</button>
             <a href="{% url 'dashboard' %}" class="btn btn-secondary">Annuler</a>
         </div>
